--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/static": "^6.10.2",
     "@fastify/view": "^7.4.1",
     "ejs": "^3.1.9",
     "fastify": "^4.17.0"
