--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/static": "^6.10.2",
     "@fastify/view": "^7.4.1",
+    "better-sqlite3": "^8.4.0",
     "ejs": "^3.1.9",
     "fastify": "^4.17.0"
   }
